deprecated/Tautulli/overlays/example/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: tautulli/tautulli
          ports:
            - name: "http-web"
              containerPort: 8181
              protocol: TCP
          volumeMounts:
            - name: tautulli-config
              mountPath: /config
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "100m"
              memory: "500Mi"
      volumes:
        - name: tautulli-config
          persistentVolumeClaim:
            claimName: tautulli-config
